# gtm-os

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  gtm-os.config.yaml.example  pyproject.toml  test_e2e_claude.py
.github/workflows/: ci.yml
docs/: v5-design.md  v5-ecosystem-analysis.md  v5-spec.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
gallery/: README.md
gallery/playbooks/: cold-outbound-b2b.yaml  cold-outbound-local-smb.yaml  competitor-intel-loop.yaml  content-repurposing-engine.yaml  crm-sales-ops.yaml  deal-closing-motion.yaml  deep-research-report.yaml  inbound-lead-qualification.yaml  intent-signal-monitoring.yaml  landing-page-conversion.yaml  lead-scoring-iteration.yaml  market-sizing-deliverable.yaml  podcast-content-motion.yaml  seo-content-cluster.yaml
gallery/tools/: autoscraper.yaml  (+9 more)
tests/: agent_e2e_test.py  bug-report.md  conftest.py  e2e-report.md  stress_test.py  test_adaptive_plays.py  test_anthropic_oauth.py  test_api_routes.py  test_context_manager.py  test_context_manager_extended.py  test_custom_tools.py  test_durability.py  test_experiment_extended.py  test_feedback.py  test_harness_extended.py  test_loader_context.py  test_loader_extended.py  test_memory.py  test_memory_extended.py  test_metrics.py  test_notifications.py  test_orchestrator.py  test_persona_evolution.py  test_proposed_experiments.py  test_quality_gate.py  test_research_tools.py  test_scheduler_extended.py  test_simulation.py  test_store.py  test_store_extended.py  test_templates.py  test_trust_scores.py  test_trustcall.py  test_vec_search.py
(+282 files in other folders)
