[project]
name = "gtm-os"
version = "0.1.0"
description = "Self-hosted autonomous Go-To-Market operating system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GTM-OS contributors" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.3",
    "typer>=0.12.5",
    "rich>=13.9.0",
    "pyyaml>=6.0.2",
    "python-multipart>=0.0.12",
    "httpx>=0.27.2",
    "litellm>=1.51.0",
    "tiktoken>=0.8.0",
    "pydantic>=2.9.0",
    "anyio>=4.6.0",
    "watchfiles>=0.24.0",
    "numpy>=1.26.0",
    "croniter>=3.0.3",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
composio = ["composio-core>=0.5.43"]
vec = ["sqlite-vec>=0.1.6"]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.1",
    "mypy>=1.13.0",
    "httpx>=0.27.2",
]

[project.scripts]
gtm-os = "gtm_os.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gtm_os"]

[tool.hatch.build.targets.wheel.force-include]
"primitives" = "gtm_os/_default_primitives"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/gtm_os/_default_primitives"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008", "RUF012"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
